public/assets/css/style.css
/* Elements */
body {
  padding: 10px;
  margin: 0;
  font-family: 'Dancing Script', cursive;
  background-color: wheat;
  background: url("/assets/images/diner.jpg");
}

li {
  padding: 5px;
  margin: 5px;
}

ul {
  list-style-type: none;
}

/* Classes */
.create-update-form {
  padding: 5px;
  margin: 5px;
  background: aqua;
}

.form-group {
  margin-bottom: 5px;
}

.label {
  font-weight: bold;
}

/* IDs */
.logo {
  max-width: 100px;
  height: auto;
}

